# menstrual_cycle_physiology_sleep_whoop

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  environment.yml  index.html  make_figures.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: index.html
docs/static/css/: index.css
menstrual_cycle_analysis/: __init__.py  _plot_utils.py  behaviors.py  cl_behav_methods.py  config.py  cycle_analysis.py  cycles.py  data_processing.py  io.py  panels.py  paper_code_wrapper.py  pca_analyses.py  physio_behavior_analyses.py  physio_methods.py  plotting_routines.py  r_utils.py  sleep_analysis.py
menstrual_cycle_analysis/stats/: __init__.py  circular.py  contrasts.py  gee.py
notebooks/: 01_basic_usage_example.ipynb  01_cycle_length.ipynb  02_r_integration_example.ipynb  02_sleep_cycle_length.ipynb  03_biometrics_gam.ipynb  04_var_residuals.ipynb  05_sleep_phase_natural_experiment.ipynb
page/: index.html
