[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "menstrual_cycle_analysis"
version = "0.1.0"
description = "Reproduction code for 'The menstrual cycle through the lens of a wearable device' (npj Digital Medicine)."
authors = [
    { name = "Alex Gonzalez", email = "alx.gnz@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pyarrow>=14",
]

[project.optional-dependencies]
# rpy2 + R 4.x are required only for notebook 03 (biometric GAMs via mgcv).
# Recommended install path is `conda env create -f environment.yml` because
# pip-installed rpy2 is fragile (needs a matching R 4.x ABI on PATH).
r = ["rpy2>=3.5,<4"]
# Jupyter for running notebooks; conda users get this via environment.yml.
notebook = ["jupyterlab>=4", "ipykernel", "ipywidgets"]

[tool.setuptools.packages.find]
where = ["."]
include = ["menstrual_cycle_analysis*"]

[tool.setuptools.package-data]
"menstrual_cycle_analysis" = ["*.py"]
